# hoppie-standalone

./: README.markdown  hoppie-standalone.cabal  run-devel.sh
.github/workflows/: haskell.yml
cli/: Main.hs
cli/Web/Hoppie/: MCDU.hs
cli/Web/Hoppie/TUI/: Input.hs  MCDU.hs  Output.hs  QR.hs  StringUtil.hs  TerminalSize.hsc
cli/Web/Hoppie/TUI/MCDU/: Draw.hs  FGNasal.hs  HttpServer.hs  Keys.hs  Main.hs  Monad.hs  Operations.hs  Views.hs
cli/Web/Hoppie/TUI/MCDU/Views/: Common.hs  Config.hs  Enum.hs  FGFS.hs  MainMenu.hs  Messages.hs  Status.hs
cli/Web/Hoppie/TUI/MCDU/Views/FGFS/: Common.hs  PerfInit.hs  Progress.hs  RouteFpl.hs
cli/static/: mcdu.css  mcdu.html  mcdu.js
nasal/: alerts.nas  common.nas  flight-phase.nas  flightplan.nas  fms.nas  fuel-sampler.nas  perf.nas  shim.nas  vnav.nas
src/Data/: Trie.hs
src/Web/: Hoppie.hs  Vatsim.hs
src/Web/Hoppie/: Network.hs  Response.hs  StringUtil.hs  System.hs  Telex.hs  Trans.hs  VATSIM.hs
src/Web/Hoppie/CPDLC/: Message.hs  MessageTypes.hs
src/Web/Hoppie/FGFS/: Connection.hs  FMS.hs  Monad.hs  NasalValue.hs
