cabal-version:      3.0
name:               hoppie-standalone
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tobias Dammers
maintainer:         tdammers@gmail.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: Web.Hoppie
                   , Web.Hoppie.Network
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.17.0.0
                 , bytestring >=0.11.0 && <0.13
                 , text >=2.0 && <2.2
                 , http-conduit >=2.3.8.3 && <2.4
                 , megaparsec >=9.5.0 && <9.6
    hs-source-dirs:   src
    default-language: Haskell2010

executable hoppie-standalone
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        hoppie-standalone

    hs-source-dirs:   cli
    default-language: Haskell2010
