cabal-version:      3.0
name:               hoppie-standalone
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tobias Dammers
maintainer:         tdammers@gmail.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Web.Hoppie
        Web.Hoppie.Network
        Web.Hoppie.Response
        Web.Hoppie.Telex
        Web.Hoppie.Trans
        Web.Hoppie.System
        Web.Hoppie.CPDLC.Message
        Web.Hoppie.CPDLC.MessageTypes
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.17.0.0
                 , async >=2.2.4 && <2.3
                 , bytestring >=0.11.0 && <0.13
                 , containers >=0.6.7 && <0.7
                 , mtl >=2.3.1 && <2.4
                 , text >=2.0 && <2.2
                 , time >=1.12 && <1.14
                 , http-conduit >=2.3.8.3 && <2.4
                 , megaparsec >=9.5.0 && <9.6
    hs-source-dirs:   src
    default-language: Haskell2010

executable hoppie-mcdu
    import:           warnings
    main-is:          Main.hs
    other-modules: Web.Hoppie.TUI.Input
                 , Web.Hoppie.TUI.Output
                 , Web.Hoppie.TUI.TerminalSize
                 , Web.Hoppie.TUI.MCDU
    -- other-extensions:
    build-depends: base ^>=4.17.0.0
                 , hoppie-standalone
                 , async >=2.2.4 && <2.3
                 , bytestring >=0.11.0 && <0.13
                 , mtl >=2.3.1 && <2.4
                 , stm >=2.5 && <2.6
                 , unix >=2.8 && <2.9
                 , vector >=0.13 && <0.14

    hs-source-dirs:   cli
    default-language: Haskell2010
