cabal-version:      3.0
name:               hoppie-standalone
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tobias Dammers
maintainer:         tdammers@gmail.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:
data-files: cli/static/*.html
          , cli/static/*.js
          , cli/static/*.css
          , cli/static/*.svg
          , nasal/*.nas

common warnings
    ghc-options: -Wall -threaded

library
    import:           warnings
    exposed-modules:
        Web.Hoppie
        Web.Hoppie.Network
        Web.Hoppie.Response
        Web.Hoppie.Telex
        Web.Hoppie.Trans
        Web.Hoppie.System
        Web.Hoppie.CPDLC.Message
        Web.Hoppie.CPDLC.MessageTypes
        Web.Hoppie.FGFS.Connection
        Web.Hoppie.FGFS.NasalValue
        Paths_hoppie_standalone
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.17.0.0
                 , aeson >=2.2.0.0 && <2.3
                 , async >=2.2.4 && <2.3
                 , bytestring >=0.11.0 && <0.13
                 , containers >=0.6.7 && <0.7
                 , SHA >=1.6.4.4 && <1.7
                 , mtl >=2.3.1 && <2.4
                 , random >=1.2 && <1.3
                 , scientific >=0.3.7 && <0.4
                 , stm >=2.5 && <2.6
                 , text >=2.0 && <2.2
                 , time >=1.12 && <1.14
                 , http-conduit >=2.3.8.3 && <2.4
                 , http-client >=0.7.13 && <0.8
                 , http-types >=0.12 && <0.13
                 , megaparsec >=9.5.0 && <9.6
                 , vector >=0.13 && <0.14
                 , websockets >=0.12.7.3 && <0.13
    hs-source-dirs:   src
    default-language: Haskell2010

executable hoppie-mcdu
    import:           warnings
    main-is:          Main.hs
    other-modules: Web.Hoppie.TUI.Input
                 , Web.Hoppie.TUI.Output
                 , Web.Hoppie.TUI.TerminalSize
                 , Web.Hoppie.TUI.StringUtil
                 , Web.Hoppie.TUI.QR
                 , Web.Hoppie.TUI.MCDU
                 , Web.Hoppie.TUI.MCDU.Draw
                 , Web.Hoppie.TUI.MCDU.Monad
                 , Web.Hoppie.TUI.MCDU.Views
                 , Web.Hoppie.TUI.MCDU.Views.Enum
                 , Web.Hoppie.TUI.MCDU.Views.Common
                 , Web.Hoppie.TUI.MCDU.Views.MainMenu
                 , Web.Hoppie.TUI.MCDU.Views.Status
                 , Web.Hoppie.TUI.MCDU.Views.Config
                 , Web.Hoppie.TUI.MCDU.Views.Messages
                 , Web.Hoppie.TUI.MCDU.Views.FGFS
                 , Web.Hoppie.TUI.MCDU.HttpServer
                 , Web.Hoppie.TUI.MCDU.Main
                 , Web.Hoppie.TUI.MCDU.Keys
                 , Paths_hoppie_standalone
    -- other-extensions:
    build-depends: base ^>=4.17.0.0
                 , hoppie-standalone
                 , aeson >=2.2.0.0 && <2.3
                 , async >=2.2.4 && <2.3
                 , bytestring >=0.11.0 && <0.13
                 , casing >=0.1.4.1 && <0.2
                 , containers >=0.6.7 && <0.7
                 , filepath >=1.4 && <1.5
                 , string-qq >=0.0.5 && <0.1
                 , mtl >=2.3.1 && <2.4
                 , network >=3.1.4 && <3.2
                 , optparse-applicative >=0.18.1.0 && <0.19
                 , qrcode-core >=0.9.8 && <0.10
                 , stm >=2.5 && <2.6
                 , terminfo >=0.4 && <0.5
                 , text >=2.0 && <2.2
                 , time >=1.12 && <1.14
                 , twain >=2.1.2 && <2.2
                 , transformers >=0.6 && <0.7
                 , unix >=2.8 && <2.9
                 , vector >=0.13 && <0.14
                 , wai >=3.2.3 && <3.3
                 , wai-extra >=3.1.13 && <3.2
                 , wai-websockets >=3.0.1.2 && <3.1
                 , websockets >=0.12.7.3 && <0.13
                 , warp >=3.3.29 && <3.4
                 , yaml >=0.11.11.2 && <0.12

    hs-source-dirs:   cli
    default-language: Haskell2010
